# djangoDRF

./: .gitignore  Dockerfile  README.md  celerybeat-schedule.bak  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/management/commands/: fill_pay.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_course_alter_payment_lesson.py  0003_course_user_lesson_user_alter_lesson_course.py  0004_alter_lesson_preview.py  0004_subscription_last_update.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py
